--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "dotenv": "^10.0.0",
     "next": "^10.2.2",
+    "nodemailer": "^6.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.6.0",
