--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@sendgrid/mail": "^7.4.4",
     "dotenv": "^10.0.0",
     "next": "^10.2.2",
     "nodemailer": "^6.6.1",
@@ -46,5 +47,6 @@
     "prettier": "^2.3.0",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
-  }
+  },
+  "cacheDirectories": [".next/cache"]
 }
