--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "dev": "next",
     "build": "next build",
     "export": "next export",
-    "start": "next start -p $PROT",
+    "start": "next start -p $PORT",
     "lint": "eslint .",
     "fix": "eslint --fix .",
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "KK",
   "license": "ISC",
-  "description": "",
+  "description": "360-movie",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
