--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^4.11.2",
     "@sendgrid/mail": "^7.4.4",
     "dotenv": "^10.0.0",
+    "googleapis": "^74.2.0",
     "next": "^10.2.2",
     "nodemailer": "^6.6.1",
     "react": "^17.0.2",
@@ -48,5 +49,7 @@
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
-  "cacheDirectories": [".next/cache"]
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
